# email-mock

./: Cargo.toml  Dockerfile
src/: main.rs
