[package]
name = "smtpbz-mock"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.204", features = ["derive"] }
axum = { version = "0.7.5", features = ["macros"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = [
  "chrono",
  "registry",
  "env-filter",
] }
tower-http = { version = "0.5.2", features = ["cors"] }
tokio = { version = "1.38.1", features = [
  "macros",
  "rt-multi-thread",
  "signal",
] }

